--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,6 @@ scipy==1.16.2
 sentencepiece==0.2.1
 six==1.17.0
 sounddevice==0.5.2
+opencv-stubs==0.1.0
+types-protobuf==6.32.1.20250918
+mypy==1.18.2
